# cudaRustTest

./: .DAO.tar.xz  .gitignore  Cargo.toml  build.rs  matrixAlgorithm.ipynb
CLAD/include/: fp.cuh  fr.cuh  g1.cuh
CLAD/src/: clad.cu
CLAD/src/g1/: g1.cu
examples/: data.rs  sparse.rs
src/: lib.rs  main.rs  msm.rs  sparse.rs  test.cu
src/CLAD/: Makefile  README.MD
src/CLAD/include/: SparseMatrix.cuh  fp.cuh  fr.cuh  g1.cuh  matrixMult.cuh  msm.cuh
src/CLAD/include/ptx/: add320.cuh  fp_redc.cuh  fp_reduce4.cuh  fp_reduce5.cuh  fp_reduce8.cuh  fr_redc.cuh  fr_reduce4.cuh  fr_reduce5.cuh  fr_reduce8.cuh  modulus.h  mul256.cuh  ptx.cuh  sub320.cuh
src/CLAD/src/: SpMV.cu  SparseMatrix.cu  clad.cuh  matrixMult.cu  matrixMultTest.cu  matrixMult_csc_Test.cu  msm.cu  scratch.cu
src/CLAD/src/fp/: filegen.sh  fp.cu  fp_add.cu  fp_cpy.cu  fp_eq.cu  fp_fromUint64.cu  fp_inv.cu  fp_isone.cu  fp_iszero.cu  fp_mma.cu  fp_mul.cu  fp_mulmont.cu  fp_ne.cu  fp_neg.cu  fp_neq.cu  fp_nonzero.cu  fp_one.cu  fp_print.cu  fp_reduce4.cu  fp_reduce5.cu  fp_reduce6.cu  fp_sqr.cu  fp_sub.cu  fp_toUint64.cu  fp_x12.cu  fp_x2.cu  fp_x3.cu  fp_x4.cu  fp_x8.cu  fp_zero.cu
src/CLAD/src/fr/: filegen.sh  fr.cu  fr_add.cu  fr_addsub.cu  fr_cpy.cu  fr_eq.cu  fr_fromUint64.cu  fr_inv.cu  fr_isone.cu  fr_iszero.cu  fr_mul.cu  fr_ne.cu  fr_neg.cu  fr_neq.cu  (+14 more)
src/CLAD/tests/: README.md  fp_test.cu  fr_test.cu  g1_test.cu  test_SpMV.cu  test_fp.cu  test_fr.cu  test_g1.cu  test_matrix_mult.cu  test_msm.cu  test_sparseMatrix.cu  test_util.cu  util_test.cu
tests/: test_CUDA.rs  test_msm.rs
(+118 files in other folders)
