[package]
name = "cuda_test"
version = "0.1.0"
edition = "2021"
autoexamples = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
home = "0.5.5"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.12"
serde_repr = "0.1.14"
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
arecibo = {git = "https://github.com/lurk-lab/arecibo.git", branch = "cache-witness" }
itertools = "0.12.1"
rand_core = "0.6.4"
rayon = "1.10.0"
tracing = "0.1.40"
abomonation = "0.7.3"
abomonation_derive = { version = "0.1.0", package = "abomonation_derive_ng" }
ff = { version = "0.13.0", features = ["derive"] }
ref-cast = "1.0.20" # allocation-less conversion in multilinear polys

[workspace]
resolver = "2"

[workspace.dependencies]
serde = { workspace = true, features = ["derive"] }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }


[build-dependencies]
cc = { version = "^1.0.70", features = ["parallel"] } #grumpkin version

[features]
msm_primitive_test = []

[[test]]
name = "test_CUDA"

[[example]]
name = "data"
path = "examples/data.rs"
